Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,55 +1,54 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Maps : Belarus Maps by OSM.org">
+    <title>Maps by osm-by</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Maps</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Maps</h1>
+        <p>Belarus Maps by OSM.org</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/osm-by/maps">View on GitHub</a>
+        <p class="view"><a href="https://github.com/osm-by/maps">View the Project on GitHub <small>osm-by/maps</small></a></p>
 
-          <h1 id="project_title">Maps</h1>
-          <h2 id="project_tagline">Belarus Maps by OSM.org</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/osm-by/maps/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/osm-by/maps/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/osm-by/maps/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/osm-by/maps/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/osm-by/maps">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h3>
 <a id="Карты-Республики-Беларусь-получаемые-конвертацией-из-данных-openstreetmap" class="anchor" href="#%D0%9A%D0%B0%D1%80%D1%82%D1%8B-%D0%A0%D0%B5%D1%81%D0%BF%D1%83%D0%B1%D0%BB%D0%B8%D0%BA%D0%B8-%D0%91%D0%B5%D0%BB%D0%B0%D1%80%D1%83%D1%81%D1%8C-%D0%BF%D0%BE%D0%BB%D1%83%D1%87%D0%B0%D0%B5%D0%BC%D1%8B%D0%B5-%D0%BA%D0%BE%D0%BD%D0%B2%D0%B5%D1%80%D1%82%D0%B0%D1%86%D0%B8%D0%B5%D0%B9-%D0%B8%D0%B7-%D0%B4%D0%B0%D0%BD%D0%BD%D1%8B%D1%85-openstreetmap" aria-hidden="true"><span class="octicon octicon-link"></span></a>Карты Республики Беларусь получаемые конвертацией из данных OpenStreetMap</h3>
+
+<ul>
+<li><a href="https://github.com/osm-by/maps/blob/master/docs/garmin.md">Карты OSM Республики Беларусь для Garmin</a></li>
+<li><a href="https://github.com/osm-by/maps/blob/master/docs/Navitel.md">Карты OSM Республики Беларусь для Навител</a></li>
+<li><p><a href="https://github.com/osm-by/maps/blob/master/docs/7ways.md">Карты OSM Республики Беларусь программы «7 дорог»</a></p></li>
+<li><p><a href="https://github.com/osm-by/maps/blob/master/docs/Mercurial.md">Основы работы с Mercurial</a></p></li>
+</ul>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Вопросы и замечания принимаются по email: <a href="mailto:osm.belarus@gmail.com">osm.belarus@gmail.com</a></p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Maps maintained by <a href="https://github.com/osm-by">osm-by</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/osm-by">osm-by</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
