--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Maps by osm-by</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -30,6 +30,10 @@
       <section>
         <h3>
 <a id="Карты-Республики-Беларусь-получаемые-конвертацией-из-данных-openstreetmap" class="anchor" href="#%D0%9A%D0%B0%D1%80%D1%82%D1%8B-%D0%A0%D0%B5%D1%81%D0%BF%D1%83%D0%B1%D0%BB%D0%B8%D0%BA%D0%B8-%D0%91%D0%B5%D0%BB%D0%B0%D1%80%D1%83%D1%81%D1%8C-%D0%BF%D0%BE%D0%BB%D1%83%D1%87%D0%B0%D0%B5%D0%BC%D1%8B%D0%B5-%D0%BA%D0%BE%D0%BD%D0%B2%D0%B5%D1%80%D1%82%D0%B0%D1%86%D0%B8%D0%B5%D0%B9-%D0%B8%D0%B7-%D0%B4%D0%B0%D0%BD%D0%BD%D1%8B%D1%85-openstreetmap" aria-hidden="true"><span class="octicon octicon-link"></span></a>Карты Республики Беларусь получаемые конвертацией из данных OpenStreetMap</h3>
+
+<p>актуальные карты доступны по адресу <a href="http://borism346.narod.ru/maps">http://borism346.narod.ru/maps</a></p>
+
+<p>документация:</p>
 
 <ul>
 <li><a href="https://github.com/osm-by/maps/blob/master/docs/garmin.md">Карты OSM Республики Беларусь для Garmin</a></li>
